Fix aligning of text in 'About Me' section

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,6 +17,6 @@ p {
     letter-spacing: 1px;
 }
 
-#about {
+.section-text {
     text-align: center;
 }
